# filer

./: Cargo.toml  LICENSE  README.md  create_test_files.bat  index.html  package.json  pnpm-lock.yaml  setup_implementation_checklist.md  tailwind.config.js  tsconfig.json  vite.config.ts
.bruno/: bruno.json  collection.bru
.bruno/Authentication/: Create User.bru  Delete User.bru  Get User.bru  List Users.bru  Login.bru  Logout.bru  Update User.bru  Validate Token.bru
.bruno/Filesystem/: Download Directory.bru  Get Files.bru
.junie/: guidelines.md
docs/: plan.md  tasks.md
resources/: windows.lib  windows.rc
resources/icons/: icon.ai  icon.icns
src/: main.tsx
src-actix/: arguments.rs  build.rs  configuration.rs  lib.rs  main.rs
src-actix/auth/: auth_data.rs  auth_db.rs  auth_endpoint.rs  auth_middleware.rs  auth_test.rs  mod.rs  permission_flags.rs
src-actix/configuration/: configuration_data.rs  configuration_endpoint.rs  mod.rs  upnp.rs
src-actix/filesystem/: channel_writer.rs  download_parameters.rs  filesystem_data.rs  filesystem_endpoint.rs  filesystem_test.rs  mod.rs
src-actix/helpers/: asset_endpoint.rs  constants.rs  db.rs  http_error.rs  mod.rs
src-actix/internal_configuration/: ic_data.rs  ic_db.rs  ic_endpoint.rs  mod.rs
src-actix/io/: mod.rs
src-actix/io/fs/: archive_wrapper.rs  download_parameters.rs  filesystem_data.rs  filesystem_endpoint.rs  filesystem_test.rs  mod.rs  normalize_path.rs
src-actix/io/fs/indexer/: indexer_data.rs  indexer_db.rs  mod.rs
src-actix/io/streams/: channel_writer.rs  mod.rs  zip_channel.rs
src-actix/middleware/: cors.rs  ip_filter.rs  mod.rs  network.rs
src/assets/components/: DirectoryActions.tsx  FileEntryIcon.tsx  FileEntryType.tsx  FileTable.tsx  FileTableBreadcrumbs.tsx  Navigation.tsx  TableFind.tsx
src/assets/components/favorites/: FavoriteEntry.tsx  FavoritesPanel.tsx
src/assets/components/modals/: ArchiveEntryModal.tsx  CopyMoveEntryModal.tsx  DeleteModal.tsx  NewFileEntryModal.tsx  RenameModal.tsx  SelectDirectoryEntryModal.tsx  SettingsModal.tsx  UploadEntryModal.tsx
src/assets/components/overrides/: Input.tsx
src/assets/components/search/: SearchInput.tsx  SearchResult.tsx
src/assets/components/setup/: License.tsx  SetupProgressStepper.tsx  StorageStep.tsx  WelcomeStep.tsx
src/assets/components/setup/steps/: AccountStep.tsx  FinishStep.tsx  NetworkStep.tsx  StorageStep.tsx  WelcomeStep.tsx
src/assets/components/upload/: DragDropArea.tsx  FileUploadProgress.tsx
src/assets/pages/: ErrorPage.tsx  FilesPage.tsx  LoginPage.tsx  SetupPage.tsx
src/assets/providers/: AuthProvider.tsx  FavoritesProvider.tsx  FileSystemEntryProvider.tsx  KeybindingProvider.tsx  SetupProvider.tsx
src/assets/scss/: index.scss
src/assets/ts/: configuration.ts  file-type-match.ts  filesystem.ts  first-setup.ts
