[package]
name = "filer"
version = "0.0.0"
edition = "2024"
build = "src-actix/build.rs"
authors = ["Drew Chase"]
repository = "https://github.com/Drew-Chase/filer"
description = "An online file browser"


[[bin]]
name = "filer"
path = "src-actix/main.rs"

[lib]
name = "filer_lib"
path = "src-actix/lib.rs"
crate-type = ["lib"]

[dependencies]
actix-web = { version = "4.9.0" }
actix-files = { version = "0.6.6" }
serde = { version = "1.0.208", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.125" }
pretty_env_logger = "0.5.0"
include_dir = "0.7.4"
walkdir = "2.5.0"
log = "0.4.22"
anyhow = "1.0.95"
thiserror = "2.0.11"
sqlx = { version = "0.8.5", features = ["sqlite", "derive", "macros", "sqlx-macros", "runtime-tokio"] }
serde_hash = "0.1.3"
enumflags2 = { version = "0.7.11", features = ["serde"] }
bcrypt = { version = "0.17.0" }
futures = "0.3.31"
zip = { version = "3.0.0" }
sysinfo = { version = "0.35.1", features = ["disk"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "signal"] }
actix-web-lab = "0.24.1"
vite-actix = "0.2.3"
uuid = { version = "1.16.0", features = ["v4"] }
tempfile = "3.10.1"
archflow = { version = "0.1.4", features = ["tokio"] }
tokio-util = { version = "0.7.15", features = [] }
notify = { version = "8.0.0", features = ["serde"] }
glob = "0.3.2"
clap = { version = "4.5.38", features = ["help", "wrap_help", "usage", "derive", "color", "suggestions", "error-context", "string"] }


[build-dependencies]
include_dir = "0.7.4"
walkdir = "2.5.0"
